part1/1.09/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapp-pingpong-ing
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kubecrud-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 1234
